src/Style/main.sass
@use "./reset"
@use "./modal"
@use "./skill"
@use "./animal"

$hit-skill-color: rgb(225, 33, 100)
$buff-skill-color: rgb(19, 157, 162)
$debuff-skill-color: rgb(243, 147, 29)
$panel-color: rgb(255, 253, 242)
$text-color: #262626

@keyframes small-pop
    0%
        transform: scale(1)
    60%
        transform: scale(1.02)
    100%
        transform: scale(1)

html
    background: #cc95c0

body
    background: linear-gradient(to bottom, transparentize(#cc95c0, 1) 0%, #dbd4b4 30%,#86c3e2 60%, transparentize(#7aa1d2, 1) 100%)

#app
    height: 100vh
    max-width: 600px
    margin: 0 auto
    color: $panel-color
    font-family: "Helvetica", sans-serif
    padding: 5%
    display: flex
    gap: 2rem
    flex-direction: column
    justify-content: flex-end
    overflow: hidden

.status-bar
    display: flex
    h5
        flex: auto
        color: $text-color
        text-align: center

.combat-log
    list-style: none
    flex: auto
    margin: 2rem
    overflow-y: scroll
    display: flex
    flex-direction: column-reverse
    li
        padding: 0.1rem
        color: #262626
        font-weight: lighter
    .player-effect
        color: green
    .enemy-effect
        color: red

@include modal.modal($panel-color)
@include skill.skill-button($panel-color, $hit-skill-color, $buff-skill-color, $debuff-skill-color)
@include animal.animal($text-color)

